# fin

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TODO.md  TestExec.cmake  asm.cc  asm.d  compiler.py  instr  lexer.fin  main.cc  makefile  preproc.py  run  test.asm  test.fin  todo.md
doc/: instructions.md  introduction.md
docs/: instructions.md
finc/: analyzer.py  error.py  generator.py  instr.py  pattern.py  tokens.py
include/fin/: allocator.h  contract.h  exception.h  function.h  library.h  log.h  memory.h  offset.h  primitives.h  runtime.h  stack.h  traits.h  type.h  typedefs.h  util.h  wrapper.h
main/: main.cc
meta/: fin.fd  instructions  lex
py/: asm.py  compiler.py  instr.py  instrs.py  instructions  mypy.ini  opcode.py  opname.py
py/finc/: analyzer.py  ast.py  builtin.py  error.py  generator.py  lex  lexer.py  node.py  parse.py  parser.py  pattern.py  reflect.py  symbols.py  tokens.py  types.py
py/finc/ref/: rt.fd
py/lex/: asm.lex
py/ref/: rt.fin
ref/: fin.fd  rt.fin
src/: allocator.cc  allocator.h  array.h  contract.cc  contract.h  exception.cc  exception.h  frame.cc  frame.h  function.h  library.h  log.h  main.cc  member.h  memory.cc  memory.h  method.h  module.h  offset.h  opcode.h  opcodes  primitives.h  runtime.cc  runtime.h  stack.cc  stack.h  struct.h  traits.h  type.cc  type.h  typedefs.h  typeinfo.h  util.h  wrapper.h
src/fin/: contract.cc  memory.cc  runtime.cc
test/: args_unmatched.fin  diverge_var.fin  generic_generic.fin  generic_struct.fin  generic_unmatched.fin  infer_failed.fin  init_mismatch.fin  invalid_implicit_cast.fin  jump_in_condition.fin  member_missing.fin  member_nonstruct.fin  no_overload.fin  no_type.fin  overload.fin  pattern_enum.fin  pattern_int.fin  pattern_struct.fin  recursive_struct.fin  redefine_as_function.fin  ref_in_scope.fin  resolve_failed.fin  sample_vec.fin  symbol_exists.fin  symbol_missing.fin  unsized_array.fin  void_var.fin
tools/: asm.py  compiler.py  data.py  error.py  generateOpcodes.py  generator.py  instr.py  instrs  instructions.py  lexer.py  node.py  opcode.py  opname.py  parse.py  parser.py  symbol.py  symbols.py  tps.py
